--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <header>    
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">La solucion al alcance</div>
-                <div class="intro-lead-in">Unete a nuestra red social!</div>
+                <div class="intro-heading">La solucion a tu alcance</div>
+                <div class="intro-lead-in">Únete a nuestra comunidad</div>
                 <a href="#concepto" class="page-scroll btn btn-xl bgGreen">Conoce mas</a>
                 <a href="#video" class="page-scroll btn btn-xl bgRec">Ver Video</a>
             </div>
@@ -128,18 +128,18 @@
     <!-- Portfolio Grid video -->
     <div style="none repeat scroll 0% 0% ">
         <section id="video" class="sec-light" style="height:200px; opacity:0.6;">
-        <div class="container"> 
-            <div class="imgInicio" id="head" data-toggle="modal" data-target="#myModal">
-                <div class="">
+            <div class="container"> 
+                <div class="imgInicio" id="head" data-toggle="modal" data-target="#myModal">
                     <div class="">
-                        <div class="col-sm-6 col-sm-offset-3 text-center sh contentBlue">
-                            <h2>Ver video</h2>
+                        <div class="">
+                            <div class="col-sm-6 col-sm-offset-3 text-center sh contentBlue">
+                                <h2>Ver video</h2>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
     </div>
     
 
@@ -378,7 +378,7 @@
             <h4 class="modal-title" id="myModalLabel"></h4>
           </div>
           <div class="modal-body">
-                <video src="https://vimeo.com/122609456"></video>
+               
           </div>
           <div class="modal-footer">
 
